fix(css): ajustar z-index para exibir popup acima dos outros elementos

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -9,7 +9,7 @@
     position: fixed;
     background-color: #1a1a1a;
     color: #9153F4;
-
+    z-index: 10;
 }
 
 .test {
